Fix layout problem

--- a/egames/css/style.css
+++ b/egames/css/style.css
@@ -29,7 +29,7 @@ body { background:#030b32 url(../images/banner.jpg) center 70px no-repeat; font-
 .header .login_box .btn_login a { color: #fff;}
 .main { position: absolute; top: 850px; left: 0; width: 100%; padding-top: 80px; margin-top: -80px;}
 .main .bg { position: absolute; bottom: 0; left: 0; width: 100%; height: 145px; background: url(../images/bg_bottom.png) center bottom no-repeat; z-index: 1;}
-input[type="text"], input[type="tel"] { padding: 5px 10px; border-radius: 5px; border: none; background: #fff; font-family:"微軟正黑體"; font-size: 18px; color: #333; box-sizing: border-box;}
+input[type="text"], input[type="tel"],input[type="date"] { padding: 5px 10px; border-radius: 5px; border: none; background: #fff; font-family:"微軟正黑體"; font-size: 18px; color: #333; box-sizing: border-box;}
 button { border: 0;}
 /*.for-display { display: none; width: 0px; height: 0px; }
 .for-input { display: inline; }*/
